# libgamepad

./: CMakeLists.txt  conanfile.py
include/gamepad/: log.hpp
